--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@ a {
 /* COMPONENTS */
 
 .container {
-  padding: 0 122px;
+  width: 717px;
 }
 
 .title {
@@ -59,4 +59,11 @@ a {
 
 .cover {
   border-radius: 10px;
+}
+
+.ProseMirror {
+  min-height: 40vh;
+  padding: 4px 20px;
+  border: 1px solid #475569;
+  border-radius: 10px;;
 }
