--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap');
 
-
 html,
 body {
   padding: 0;
@@ -66,4 +65,34 @@ a {
   padding: 4px 20px;
   border: 1px solid #475569;
   border-radius: 10px;;
+}
+
+pre {
+  background: #1E293B;
+  color: #fff;
+  font-family: "JetBrainsMono", monospace;
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
+}
+
+pre code {
+  color: inherit;
+  padding: 0;
+  background: none;
+  font-size: 0.8rem;
+}
+
+code {
+  font-size: 12px;
+  font-family: "JetBrainsMono", monospace;
+  padding: 0.2rem 0.4rem;
+  color: #fff;
+  background-color: #1E293B;
+  border-radius: 5px;
+}
+
+blockquote {
+  padding-left: 1rem;
+  border-left: 2px solid #0D0D0D;
+  margin-left: 0;
 }
